--- a/src/app/components/product-master/product-master.component.scss
+++ b/src/app/components/product-master/product-master.component.scss
@@ -9,3 +9,15 @@
 .btn-light {
     margin-left: 10px;
 }
+
+.btn-danger {
+    margin-left: 10px;
+}
+
+.bi {
+    font-size: 1.25rem;
+}
+
+.bi-trash {
+    margin-left: 15px;
+}
