--- a/src/app/components/customer-list/customer-list.component.html
+++ b/src/app/components/customer-list/customer-list.component.html
@@ -9,7 +9,7 @@
                 <th>Name</th>
                 <th>Address</th>
                 <th>City</th>
-                <th></th>
+                <th>{{outstandings}}</th>
                 <th></th>
             </tr>
         </thead>
@@ -18,9 +18,27 @@
                 <td>{{p.businessName}} </td>
                 <td>{{p.address.address}} </td>
                 <td>{{p.address.city}}</td>
-                <td><a (click)="onEdit(p)"><i class="bi bi-pencil-square"></i></a></td>
-                <td><a  (click)="onDelete(p._id)" ><i class="bi bi-trash"></i></a></td>
+                <td>{{p.outstandings || 0 |currency:'INR'}} </td>
+                <td><a (click)="onEdit(p)"><i class="bi bi-pencil-square"></i></a>
+                    <a *ngIf="!p.purchaseCount" (click)="showDeleteModal(p._id)" ><i class="bi bi-trash"></i></a>
+                </td>
             </tr>
         </tbody>
     </table>
 </div>
+
+<!-- Delete Warning -->
+<div class="modal" id="deleteWarning">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <p class="modal-title">You're attempting to delete {{listType|titlecase}} Id <strong>{{selectedId}}</strong></p>
+        </div>
+          <div class="modal-body">
+              <p>Are you sure you want to delete this item</p>
+              <button class="btn btn-secondary" (click)="closeModal()">Close</button>
+              <button class="btn btn-danger" (click)="onDelete()">Delete</button>
+          </div>
+      </div>
+    </div>
+  </div>
