--- a/src/app/components/customer-master/customer-master.component.html
+++ b/src/app/components/customer-master/customer-master.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col">
           <div class="mb-3">
-            <label for="businessName" class="form-label">Business Name</label>
+            <label for="businessName" class="form-label">Business Name</label><span class="text-danger">*</span>
             <input type="text" class="form-control" #businessName="ngModel" name="businessName"
               [(ngModel)]="customer.businessName" required>
             <div *ngIf="businessName.invalid && (businessName.dirty || businessName.touched)" class="alert alert-danger">
@@ -14,53 +14,90 @@
           </div>
           <div class="row">
             <div class="form-group mb-3 col">
-              <label for="phone" class="form-label">Phone Number</label>
-              <input type="text" class="form-control" name="phone" [(ngModel)]="customer.phone">
+              <label for="phone" class="form-label">Phone Number</label><span class="text-danger">*</span>
+              <input type="text" class="form-control"  name="phone" [(ngModel)]="customer.phone"
+              #phone="ngModel" required minlength="10" maxlength="10">
+              <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="alert alert-danger">
+                <div *ngIf="phone.errors">
+                  Required field.
+                </div>
+                <div *ngIf="phone.errors?.['minlength']">
+                  Incorrect Number</div>
+              </div>
             </div>
             <div class="mb-3 col">
               <label for="phone2" class="form-label">Alternate Phone Number</label>
-              <input type="text" class="form-control" name="phone2" [(ngModel)]="customer.phone2">
+              <input type="text" class="form-control" #phone2 name="phone2" [(ngModel)]="customer.phone2">
             </div>
           </div>
           <div class="mb-3">
-            <label for="contactPerson" class="form-label">Contact Person</label>
-            <input type="text" class="form-control" name="contactPerson" [(ngModel)]="customer.contactPerson">
+            <label for="contactPerson" class="form-label">Contact Person</label><span class="text-danger">*</span>
+            <input type="text" class="form-control" name="contactPerson" [(ngModel)]="customer.contactPerson"
+            >
           </div>
           <div ngModelGroup="address">
             <div class="mb-3">
-              <label for="address" class="form-label">Address</label>
-              <input type="text" class="form-control" name="address" [(ngModel)]="customer.address.address">
+              <label for="address" class="form-label">Address</label><span class="text-danger">*</span>
+              <input type="text" class="form-control" name="address" [(ngModel)]="customer.address.address"
+              #address="ngModel" required>
+              <div *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger">
+                <div *ngIf="address.errors">
+                  Required field.
+                </div>
+              </div>
             </div>
             <div class="row">
-              <div class="mb-3 col">
-                <label for="state" class="form-label">State</label>
-                <select class="form-select" name="state" (change)="onStateSelect()" [(ngModel)]="customer.address.state">
-                  <option *ngFor="let s of states" [ngValue]="s.name">{{s.name}}</option>
-                </select>
-              </div>
-              <div class="mb-3 col">
-                <label for="city" class="form-label">City</label>
-                <select class="form-select" name="city" [(ngModel)]="customer.address.city">
-                  <option *ngFor="let c of cities" [ngValue]="c.name">{{c.name}}</option>
-                </select>
-              </div>
-              <div class="mb-3 col">
-                <label for="pin" class="form-label">Pin</label>
-                <input type="text" class="form-control" name="pinCode" [(ngModel)]="customer.address.pinCode">
+                <div class="mb-3 col">
+                  <label for="state" class="form-label">State</label><span class="text-danger">*</span>
+                  <select class="form-select" name="state" (change)="onStateSelect()" [(ngModel)]="customer.address.state"
+                  #state="ngModel" required>
+                    <option *ngFor="let s of states" [ngValue]="s.name">{{s.name}}</option>
+                  </select>
+                    <div *ngIf="state.invalid && (state.dirty || state.touched)" class="alert alert-danger">
+                      <div *ngIf="state.errors">
+                        Required field.
+                      </div>
+                    </div>
+                </div>
+                <div class="mb-3 col">
+                  <label for="city" class="form-label">City</label><span class="text-danger">*</span>
+                  <select class="form-select" name="city" [(ngModel)]="customer.address.city"
+                  #city="ngModel" required >
+                    <option *ngFor="let c of cities" [ngValue]="c.name">{{c.name}}</option>
+                  </select>
+                    <div *ngIf="city.invalid && (city.dirty || city.touched)" class="alert alert-danger">
+                      <div *ngIf="city.errors">
+                        Required field.
+                      </div>
+                    </div>
+                  </div>
+                <div class="mb-3 col">
+                  <label for="pin" class="form-label">Pin</label><span class="text-danger">*</span>
+                  <input type="text" class="form-control" name="pinCode" [(ngModel)]="customer.address.pinCode"
+                  #pinCode="ngModel" required minlength="6" maxlength="6" >
+                  <div *ngIf="pinCode.invalid && (pinCode.dirty || pinCode.touched)" class="alert alert-danger">
+                    <div *ngIf="pinCode.errors">
+                      Required field.
+                    </div>
+                    <div *ngIf="pinCode.errors?.['minlength']">
+                      Incorrect Number
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+        
   
         <div class="col">
           <div ngModelGroup="bankDetails">
             <div class="mb-3">
               <label for="accountNo" class="form-label">Account Number</label>
-              <input type="text" class="form-control" name="accountNo" [(ngModel)]="customer.bankDetails.accountNo">
+              <input type="text" class="form-control" #accountNo name="accountNo" [(ngModel)]="customer.bankDetails.accountNo">
             </div>
             <div class="mb-3">
               <label for="bankName" class="form-label">Bank Name</label>
-              <input type="text" class="form-control" name="bankName" [(ngModel)]="customer.bankDetails.bankName">
+              <input type="text" class="form-control" #bankName name="bankName" [(ngModel)]="customer.bankDetails.bankName">
             </div>
             <div class="row">
               <div class="mb-3 col">
@@ -81,13 +118,18 @@
               </div>
               <div class="mb-3 col">
                 <label for="gstNo" class="form-label">GST Number</label>
-                <input type="text" class="form-control" name="gstNo" [(ngModel)]="customer.compliance.gstNo">
+                <input type="text" class="form-control" name="gstNo" [(ngModel)]="customer.compliance.gstNo"
+                #gstNo="ngModel" minlength="15" maxlength="15">
+                <div *ngIf="gstNo.errors?.['minlength']" class="alert alert-danger">
+                  <div *ngIf="gstNo.errors?.['minlength']">
+                    Incorrect GSTIN
+                  </div>
+                </div>
               </div>
               <div class="mb-3 col">
                 <label for="gstType" class="form-label">GST Type</label>
                 <select class="form-select" name="gstType" [(ngModel)]="customer.compliance.gstType">
-                  <option value="Regular">Regular</option>
-                  <option value="composition">Composition</option>
+                  <option *ngFor="let type of gstTypeList" value="{{type}}">{{type}}</option>
                 </select>
               </div>
             </div>
