--- a/src/app/components/purchase-voucher/purchase-voucher.component.html
+++ b/src/app/components/purchase-voucher/purchase-voucher.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="PurchaseInvoiceForm" #purchaseForm (ngSubmit)="savePurchase(purchaseForm)" class="container">
+<div class="container">
+<form [formGroup]="PurchaseInvoiceForm" #purchaseForm  >
   
   
     <h2 style="text-align: center;margin-top: 0.5rem;">{{pageTitle}}</h2>
@@ -29,7 +30,7 @@
             </select>
         </div> 
         <div class="col-2">
-          <button disabled class="btn btn-light" >Add Creditor</button>
+          <button class="btn btn-light" (click)=" showModal()" >Add Creditor</button>
         </div>
       </div>       
           <div class="form-group">
@@ -126,10 +127,27 @@
         </div>
       </div>
     </div>
-      <div class="col-lg-12">
-        <button class="btn btn-primary">Save</button>
+      <div class="form-group">
+        <button class="btn btn-primary" (click)="savePurchase(purchaseForm)">Save</button>
       </div>
 </form>
+
+<!-- popup modal -->
+<div class="modal" id="addMaster">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close" id="close"></button>
+      <div class="modal-body">
+        <app-customer-master [masterType]="masterType"  [customer]="customer" 
+        (submitForm)="onCreditorSubmit($event)">
+        </app-customer-master>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+
 
 
 
