--- a/src/app/components/purchase-voucher/purchase-voucher.component.scss
+++ b/src/app/components/purchase-voucher/purchase-voucher.component.scss
@@ -10,3 +10,9 @@
 .container {
     background-color: rgba(190, 27, 82, 0.3);
 }
+
+#close {
+    margin-left: 90%;
+    margin-right: 10px;
+    padding: 20px
+}
