--- a/src/app/components/sales-voucher/sales-voucher.component.scss
+++ b/src/app/components/sales-voucher/sales-voucher.component.scss
@@ -10,3 +10,9 @@
 .container {
     background-color: rgba(76, 175, 80, 0.3);
 }
+
+#close {
+    margin-left: 90%;
+    margin-right: 10px;
+    padding: 20px
+}
