--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,8 +30,8 @@ body {
 .container {
     width: 100%;
     margin: 60px 80px;
-    overflow-y: auto;
-    height: 100vh;
+    // overflow-y: auto;
+    height: auto;
     border-radius: 1rem;
     padding: 30px;
 
